clusters/common/apps/keiretsu/status/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  annotations:
    item.homer.rajsingh.info/name: "Gatus"
    item.homer.rajsingh.info/subtitle: "Service Status Monitor"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/gatus.png"
    item.homer.rajsingh.info/tag: "infrastructure"
    item.homer.rajsingh.info/keywords: "monitoring, status, uptime"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "status.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gatus
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
